--- a/Navigation.conf
+++ b/Navigation.conf
@@ -10,7 +10,7 @@
 ;;   generate new navigation file.
 
 [GENERAL]
-ProjectTitle = PUT THE TITLE OF YOUR PROJECT HERE.
+ProjectTitle = ENCORE AUTOMATION.
 
 
 [CONTENT]
