--- a/Navigation.conf
+++ b/Navigation.conf
@@ -39,7 +39,7 @@ fileTypesExclude = -template.txt
 
 ;; Files to exclude from the directory tree
 filesExclude = CITATION.md, 
-               Step-by-Step-ENCORE-Guide_v11.docx, Navigation.py, .gitignore, github.txt,
+               Navigation.py, .gitignore, github.txt,
 			   0_GETTINGSTARTED.docx
 
 ;; Specific files to always include in the directory tree 
@@ -49,8 +49,8 @@ filesInclude = test.abc
 
 [DIR.INCLUDE.EXCLUDE]
 ;; Directories to exclude from the directory tree
-directoryExclude = Sharing, 0_SoftwareEnvironment, 
+directoryExclude = Manuscript, Sharing, 0_SoftwareEnvironment, 
 				   .git, .ipynb_checkpoints, __pycache__,
-				   .navigate
+				   .navigate, 0_GETTINGSTARTED_files
 
 
