--- a/Processing/2-CREATE-TEMPLATE-REPSEQ/ENV.yml
+++ b/Processing/2-CREATE-TEMPLATE-REPSEQ/ENV.yml
@@ -3,9 +3,46 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python
-  - git
-  - rclone
-  - pandoc
-  - pyyaml
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - bzip2=1.0.8=h5eee18b_6
+  - c-ares=1.19.1=h5eee18b_0
+  - ca-certificates=2024.2.2=hbcca054_0
+  - curl=8.7.1=hdbd6064_0
+  - expat=2.6.2=h6a678d5_0
+  - gdbm=1.18=hd4cb3f1_4
+  - gettext=0.21.0=h39681ba_1
+  - git=2.40.1=pl5340h36fbf9e_1
+  - icu=73.1=h6a678d5_0
+  - krb5=1.20.1=h143b758_1
+  - ld_impl_linux-64=2.38=h1181459_1
+  - libcurl=8.7.1=h251f7ec_0
+  - libedit=3.1.20230828=h5eee18b_0
+  - libev=4.33=h7f8727e_1
+  - libffi=3.4.4=h6a678d5_1
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
+  - libnghttp2=1.57.0=h2d74bed_0
+  - libssh2=1.11.0=h251f7ec_0
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libuuid=1.41.5=h5eee18b_0
+  - libxml2=2.10.4=hfdd30dd_2
+  - ncurses=6.4=h6a678d5_0
+  - openssl=3.0.13=h7f8727e_2
+  - pandoc=3.2=ha770c72_0
+  - pcre2=10.42=hebb0a14_1
+  - perl=5.34.0=h5eee18b_2
+  - pip=24.0=py312h06a4308_0
+  - python=3.12.3=h996f2a0_1
+  - pyyaml=6.0.1=py312h5eee18b_0
+  - rclone=1.65.2=h519d9b9_0
+  - readline=8.2=h5eee18b_0
+  - setuptools=69.5.1=py312h06a4308_0
+  - sqlite=3.45.3=h5eee18b_0
+  - tk=8.6.14=h39e8969_0
+  - tzdata=2024a=h04d1e81_0
+  - wheel=0.43.0=py312h06a4308_0
+  - xz=5.4.6=h5eee18b_1
+  - yaml=0.2.5=h7f98852_2
+  - zlib=1.2.13=h5eee18b_1
 prefix: /home/barbera/anaconda3/envs/encore-repseq
